# conan_starter_project

./: .clang-format  .clang-tidy  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  README.md  conanfile.txt
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml
conan/profiles/: coverage
docker/: Dockerfile
include/: myInclude.hpp
src/: application.cpp  main.cpp
tests/: CMakeLists.txt  test_main.cpp
tools/: iwyu_hook.py
